# llm-core

./: 404.html  index.html  objects.inv  pyproject.toml
api/chunks/: index.html
api/messages/: index.html
api/rich/: index.html
api/roles/: index.html
api/tools/: index.html
llm_ir/: __init__.py  chunks.py  messages.py  rich_repr.py  tools.py
llmir/: rich_repr.py
llmir/adapter/: openai.py
search/: search_index.json
src/llmir/adapter/: openai.py
